packages/@testuj.to/react/src/components/Button/styles.css
.tt-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border: none;
  border-radius: 8px;
  padding: 0 15px;
  height: 48px;
  cursor: pointer;
  color: var(--color-button);
  background-color: var(--color-button-bg);
  transition: all 0.2s;
  box-sizing: border-box;
  font: var(--font-normal-14-600);
}

.tt-button:disabled {
  cursor: not-allowed;
  background-color: #eeeff2;
  color: #888e98;
}

.tt-button.primary {
  color: var(--color-button);
  background-color: var(--color-button-bg);
}

.tt-button.primary:disabled {
  color: #888e98;
  background-color: #eeeff2;
}

.tt-button.primary:hover {
  background-color: var(--color-button-bg-hover);
}

.tt-button.primary:disabled:hover {
  background-color: #eeeff2;
  color: #888e98;
  border: 1px solid #eeeff2;
}

.tt-button.secondary {
  background-color: var(--color-button-secondary-bg);
  color: var(--color-button-secondary-text);
  border: 1px solid var(--color-button-secondary-border);
}

.tt-button.secondary:disabled {
  background-color: #eeeff2;
  color: #888e98;
  border: 1px solid #eeeff2;
}

.tt-button.secondary:hover {
  border: 1px solid var(--color-button-secondary-border-hover);
}

.tt-button.secondary:disabled:hover {
  background-color: #eeeff2;
  color: #888e98;
  border: 1px solid #eeeff2;
}

.tt-button.success {
  background-color: var(--color-button-success-bg);
  color: var(--color-button-success-text);
  border: 1px solid var(--color-button-success-border);
}

.tt-button.success:disabled {
  background-color: #eeeff2;
  color: #888e98;
  border: 1px solid #eeeff2;
}

.tt-button.success:hover {
  border: 1px solid var(--color-button-success-border-hover);
  background-color: var(--color-button-success-bg-hover);
}

.tt-button.success:disabled:hover {
  background-color: #eeeff2;
  color: #888e98;
  border: 1px solid #eeeff2;
}

.tt-button.danger {
  background-color: var(--color-button-danger-bg);
  color: var(--color-button-danger-text);
  border: 1px solid var(--color-button-danger-border);
}

.tt-button.danger:disabled {
  background-color: #eeeff2;
  color: #888e98;
  border: 1px solid #eeeff2;
}

.tt-button.danger:hover {
  border: 1px solid var(--color-button-danger-border-hover);
}

.tt-button.danger:disabled:hover {
  background-color: #eeeff2;
  color: #888e98;
  border: 1px solid #eeeff2;
}

.tt-button.info {
  background-color: var(--color-button-info-bg);
  color: var(--color-button-info-text);
  border: 1px solid var(--color-button-info-border);
}

.tt-button.info:disabled {
  background-color: #eeeff2;
  color: #888e98;
  border: 1px solid #eeeff2;
}

.tt-button.info:hover {
  border: 1px solid var(--color-button-info-border-hover);
}

.tt-button.info:disabled:hover {
  background-color: #eeeff2;
  color: #888e98;
  border: 1px solid #eeeff2;
}

